# parse_duration

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml
src/: lib.rs  parse.rs  tests.rs
