[package]
name = "parse_duration"
version = "1.0.1"
authors = ["zeta12ti <zeta12ti@users.noreply.github.com>"]
homepage = "https://github.com/zeta12ti/parse_duration/"
repository = "https://github.com/zeta12ti/parse_duration/"
documentation = "https://docs.rs/parse_duration"
description = "Parses a duration from a string."
readme = "README.md"
keywords = ["duration", "date", "string", "parse"]
categories = ["command-line-interface", "parsing"]
license = "MIT"

[profile.release]
lto = true

[badges]
travis-ci = { repository = "zeta12ti/parse_duration", branch = "master" }
appveyor = { repository = "zeta12ti/parse_duration", branch = "master", service = "github" }

[dependencies]
regex = "0.2"
lazy_static = "0.2.8"
num = "0.1.40"
