[package]
name = "parse_duration"
version = "2.1.0"
authors = ["zeta12ti <zeta12ti@protonmail.com>"]
homepage = "https://github.com/zeta12ti/parse_duration/"
repository = "https://github.com/zeta12ti/parse_duration/"
documentation = "https://docs.rs/parse_duration"
description = "Parses a duration from a string."
readme = "README.md"
keywords = ["duration", "date", "string", "parse"]
categories = ["command-line-interface", "parsing"]
license = "MIT"

[badges]
travis-ci = { repository = "zeta12ti/parse_duration", branch = "master" }

[dependencies]
regex = "1"
lazy_static = "1"
num = "0.2"
